Fixed horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .notifications_container{
@@ -22,5 +23,5 @@
 }
 
 .special_effects{
-    
+   
 }
